--- a/api/pyproject.toml
+++ b/api/pyproject.toml
@@ -5,9 +5,11 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "aiosmtplib>=4.0.1",
     "argon2-cffi>=23.1.0",
     "asyncpg>=0.30.0",
     "fastapi[standard]>=0.115.12",
+    "mjml>=0.11.1",
     "snowflake-id>=1.0.2",
 ]
 
