--- a/api/pyproject.toml
+++ b/api/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "aiocache>=0.12.3",
     "aiosmtplib>=4.0.1",
     "argon2-cffi>=23.1.0",
     "asyncpg>=0.30.0",
