--- a/api/pyproject.toml
+++ b/api/pyproject.toml
@@ -10,6 +10,8 @@ dependencies = [
     "argon2-cffi>=23.1.0",
     "asyncpg>=0.30.0",
     "fastapi[standard]>=0.115.12",
+    "grpcio>=1.71.0",
+    "grpcio-tools>=1.71.0",
     "mjml>=0.11.1",
     "snowflake-id>=1.0.2",
 ]
@@ -18,5 +20,6 @@ dependencies = [
 dev = [
     "asyncpg-stubs>=0.30.1",
     "black>=25.1.0",
+    "grpc-stubs>=1.53.0.6",
     "isort>=6.0.1",
 ]
