--- a/api/pyproject.toml
+++ b/api/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "api"
-version = "0.1.0"
-description = "Add your description here"
+version = "0.0.0"
+description = "The Derailed API"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
