--- a/api/pyproject.toml
+++ b/api/pyproject.toml
@@ -12,7 +12,9 @@ dependencies = [
     "fastapi[standard]>=0.115.12",
     "grpcio>=1.71.0",
     "grpcio-tools>=1.71.0",
+    "jinja2[async]>=3.1.6",
     "mjml>=0.11.1",
+    "python-dotenv>=1.1.0",
     "snowflake-id>=1.0.2",
 ]
 
