--- a/app/package.json
+++ b/app/package.json
@@ -33,7 +33,7 @@
 		"@iconify/svelte": "^5.0.0",
 		"@types/ua-parser-js": "^0.7.39",
 		"bits-ui": "^1.8.0",
-		"emoji-datasource-apple": "^15.1.2",
+		"phosphor-svelte": "^3.0.1",
 		"svelte-system-info": "^1.0.3",
 		"ua-parser-js": "^0.7.33"
 	}
