--- a/app/package.json
+++ b/app/package.json
@@ -34,6 +34,14 @@
 		"@fontsource/figtree": "^5.2.8",
 		"@fontsource/inter": "^5.2.5",
 		"@iconify/svelte": "^5.0.0",
+		"@tiptap/core": "^2.12.0",
+		"@tiptap/extension-document": "^2.12.0",
+		"@tiptap/extension-history": "^2.12.0",
+		"@tiptap/extension-paragraph": "^2.12.0",
+		"@tiptap/extension-placeholder": "^2.12.0",
+		"@tiptap/extension-text": "^2.12.0",
+		"@tiptap/pm": "^2.12.0",
+		"@tiptap/starter-kit": "^2.12.0",
 		"@types/ua-parser-js": "^0.7.39",
 		"bits-ui": "^1.8.0",
 		"eventemitter3": "^5.0.1",
