--- a/app/package.json
+++ b/app/package.json
@@ -46,8 +46,17 @@
 		"bits-ui": "^1.8.0",
 		"eventemitter3": "^5.0.1",
 		"json-bigint": "^1.0.0",
+		"moment-timezone": "^0.6.0",
 		"phosphor-svelte": "^3.0.1",
+		"rehype-katex": "^7.0.1",
+		"rehype-sanitize": "^6.0.0",
+		"rehype-stringify": "^10.0.1",
+		"remark-breaks": "^4.0.0",
+		"remark-gfm": "^4.0.1",
+		"remark-parse": "^11.0.0",
+		"remark-rehype": "^11.1.2",
 		"svelte-system-info": "^1.0.3",
-		"ua-parser-js": "^0.7.33"
+		"ua-parser-js": "^0.7.33",
+		"unified": "^11.0.5"
 	}
 }
