--- a/app/package.json
+++ b/app/package.json
@@ -45,12 +45,14 @@
 		"@types/ua-parser-js": "^0.7.39",
 		"bits-ui": "^1.8.0",
 		"eventemitter3": "^5.0.1",
+		"hast-util-sanitize": "^5.0.2",
 		"json-bigint": "^1.0.0",
 		"moment-timezone": "^0.6.0",
 		"phosphor-svelte": "^3.0.1",
 		"rehype-katex": "^7.0.1",
 		"rehype-sanitize": "^6.0.0",
 		"rehype-stringify": "^10.0.1",
+		"remark": "^15.0.1",
 		"remark-breaks": "^4.0.0",
 		"remark-gfm": "^4.0.1",
 		"remark-parse": "^11.0.0",
