--- a/site/package.json
+++ b/site/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.7",
     "astro": "^5.8.0",
+    "moment-timezone": "^0.6.0",
     "tailwindcss": "^4.1.7"
   }
 }
