--- a/app/package.json
+++ b/app/package.json
@@ -26,6 +26,7 @@
 		"svelte": "^5.33.2",
 		"svelte-check": "^4.2.1",
 		"tailwindcss": "^4.1.7",
+		"tailwindcss-animate": "^1.0.7",
 		"typescript": "^5.8.3",
 		"vite": "^6.3.5"
 	},
