--- a/crates/api/Cargo.toml
+++ b/crates/api/Cargo.toml
@@ -17,11 +17,14 @@ thiserror.workspace = true
 serde.workspace = true
 models.workspace = true
 email_address.workspace = true
-aws-config.workspace = true
-aws-sdk-s3.workspace = true
+minio.workspace = true
 tower-http.workspace = true
 ulid.workspace = true
 sha2.workspace = true
 hex.workspace = true
 rand.workspace = true
 base64.workspace = true
+zune-image.workspace = true
+zune-core.workspace = true
+zune-imageprocs.workspace = true
+libcaesium.workspace = true
