--- a/crates/api/Cargo.toml
+++ b/crates/api/Cargo.toml
@@ -29,3 +29,5 @@ zune-core.workspace = true
 zune-imageprocs.workspace = true
 libcaesium.workspace = true
 sqlxmq.workspace = true
+ractor.workspace = true
+rt-actors.workspace = true
