--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,6 +30,8 @@ zune-core = "0.4.12"
 zune-imageprocs = "0.4.15"
 libcaesium = "0.17.4"
 sqlxmq = "0.6.0"
+lettre = "0.11"
+ttlhashmap = "0.1"
 
 models = { path = "./crates/models" }
 rt-actors = { path = "./crates/rt-actors" }
