--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ members = ["crates/*"]
 
 ractor = { version = "0.15", features = ["async-trait"] }
 tokio = { version = "1", features = ["full"] }
-axum = { version = "0.8", features = ["macros", "multipart"] }
+axum = { version = "0.8", features = ["macros", "multipart", "ws"] }
 axum_thiserror = "0.1.0"
 argon2 = "0.5"
 regex = "1.11"
@@ -30,6 +30,8 @@ zune-core = "0.4.12"
 zune-imageprocs = "0.4.15"
 libcaesium = "0.17.4"
 sqlxmq = "0.6.0"
+futures-util = "*"
+serde_json = "1"
 
 models = { path = "./crates/models" }
 rt-actors = { path = "./crates/rt-actors" }
