--- a/crates/api/Cargo.toml
+++ b/crates/api/Cargo.toml
@@ -31,3 +31,5 @@ libcaesium.workspace = true
 sqlxmq.workspace = true
 ractor.workspace = true
 rt-actors.workspace = true
+futures-util.workspace = true
+serde_json.workspace = true
