--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,6 +34,7 @@ futures-util = "*"
 serde_json = "1"
 lettre = "0.11"
 ttlhashmap = "0.1"
+cf-turnstile = "0.2"
 
 models = { path = "./crates/models" }
 rt-actors = { path = "./crates/rt-actors" }
