--- a/app/package.json
+++ b/app/package.json
@@ -54,6 +54,7 @@
 		"remark-rehype": "^11.1.2",
 		"svelte-easy-crop": "^4.0.1",
 		"svelte-lexical": "^0.6.0",
+		"svelte-turnstile": "^0.11.0",
 		"tailwindcss-neumorphism-ui": "^1.0.4",
 		"ulidx": "^2.4.1",
 		"unified": "^11.0.5"
