feat(rt): identify

--- a/crates/api/Cargo.toml
+++ b/crates/api/Cargo.toml
@@ -36,3 +36,4 @@ serde_json.workspace = true
 lettre.workspace = true
 ttlhashmap.workspace = true
 cf-turnstile.workspace = true
+futures.workspace = true
