--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,6 +35,7 @@ serde_json = "1"
 lettre = "0.11"
 ttlhashmap = "0.1"
 cf-turnstile = "0.2"
+futures = "0.3.31"
 
 models = { path = "./crates/models" }
 rt-actors = { path = "./crates/rt-actors" }
