feat: the rust mystery and actually close the websocket...

--- a/crates/api/Cargo.toml
+++ b/crates/api/Cargo.toml
@@ -30,7 +30,7 @@ zune-imageprocs.workspace = true
 libcaesium.workspace = true
 sqlxmq.workspace = true
 ractor.workspace = true
-rt-actors.workspace = true
+rt_actors.workspace = true
 futures-util.workspace = true
 serde_json.workspace = true
 lettre.workspace = true
