--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,10 +33,12 @@ sqlxmq = "0.6.0"
 futures-util = "*"
 serde_json = "1"
 lettre = "0.11"
-ttlhashmap = "0.1"
 cf-turnstile = "0.2"
 futures = "0.3.31"
 tower = "0.5"
+dashmap = "6.1.0"
 
 models = { path = "./crates/models" }
 rt_actors = { path = "./crates/rt_actors" }
+ttl_dashmap = { path = "./crates/ttl_dashmap" }
+
