--- a/crates/api/Cargo.toml
+++ b/crates/api/Cargo.toml
@@ -34,7 +34,7 @@ rt_actors.workspace = true
 futures-util.workspace = true
 serde_json.workspace = true
 lettre.workspace = true
-ttlhashmap.workspace = true
 cf-turnstile.workspace = true
 futures.workspace = true
 tower.workspace = true
+ttl_dashmap.workspace = true
